--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normanize.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header background__color_style_light">
-      <div class="header__logo header__logo_place_header"></div>
+      <div class="logo logo__place_header"></div>
       <h2 class="header__title">Научиться учиться</h2>
-      <div class="header__subtitle">Какие современные и эффективные подходы
-          <br>к обучению вы можете использовать в своей
-          <br>жизни?
-      <a href="#" class="header__link text__color_style_blue">
-        <span>Узнать &#8594;</span>
-      </a>
-      </div>
+      <h5 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <a href="#" class="header__link text__color_style_blue">Узнать &#8594;</a>
+      </h5>
   <img src="./images/header-image.png" class="header__main-illustration" alt="Fyodor Pavlovich Reshetnikov: Low Marks Again">
   <div class="header__square-pic"></div>
     </header>
@@ -28,49 +24,49 @@
         Главные проблемы в обучении
         </h4>
         <div class="two-columns__main-text">
-        <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
-        <div class="two-columns__paragraph two-columns__paragraph_position_central-block">
+        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+        <p class="two-columns__paragraph">
         <span class="two-columns__span-accent">Вывод:</span>
-        учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-        <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+        учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
         </div>
       </section>
       <section class="digits">
         <h5 class="section-title">Цифры и факты</h5>
-        <div class="section-subtitle">Про учёбу и мозг</div>
+        <h6 class="section-subtitle">Про учёбу и мозг</h6>
         <div class="table">
           <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
+            <h6 class="table__heading">86 миллиардов</h6>
             <div class="table__text">Число нейронов в мозге человека</div>
           </div>
           <div class="table__cell">
-          <div class="table__heading">2.1 миллиарда</div>
+          <h6 class="table__heading">2.1 миллиарда</h6>
             <div class="table__text">Число нуждающихся в повышении квалификации</div>
             <div class="table__text">Всемирный Банк, 2017</div>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
+            <h6 class="table__heading">1000 терабайт</h6>
             <div class="table__text">Объём памяти человека</div>
           </div>
           <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
+            <h6 class="table__heading">500 триллионов</h6>
             <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
           </div>
           <div class="table__cell">
-            <div class="table__heading">420 миллионов</div>
+            <h6 class="table__heading">420 миллионов</h6>
             <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
             <div class="table__text">Всемирный Банк, 2017</div>
           </div>
           <div class="table__cell">
-            <div class="table__heading">17–20 лет</div>
+            <h6 class="table__heading">17–20 лет</h6>
             <div class="table__text">Пик обучаемости</div>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1885 год</div>
+            <h6 class="table__heading">1885 год</h6>
             <div class="table__text">Открытие кривой забывания</div>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1889 год</div>
+            <h6 class="table__heading">1889 год</h6>
             <div class="table__text">Открытие условного рефлекса</div>
           </div>
         </div>
@@ -134,7 +130,7 @@
     <footer class="footer background__color_style_dark text__color_style_white">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <div class="logo__place_footer header__logo"></div>
+          <div class="logo logo__place_footer"></div>
           <div class="footer__author text__style_">&copy; 2020 Kaschitskiy Maxim</div>
         </div>
         <div class="footer__column_content_info">
