--- a/index.html
+++ b/index.html
@@ -9,156 +9,164 @@
 </head>
 <body>
   <div class="page">
-    <header class="header background__color_style_light">
+    <header class="header">
       <div class="logo logo__place_header"></div>
-      <h2 class="header__title">Научиться учиться</h2>
-      <h5 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" class="header__link text__color_style_blue">Узнать &#8594;</a>
-      </h5>
-  <img src="./images/header-image.png" class="header__main-illustration" alt="Fyodor Pavlovich Reshetnikov: Low Marks Again">
-  <div class="header__square-pic"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать &#8594;</a>
+      </p>
+      <img src="./images/header-image.png" class="header__main-illustration" alt="«Опять двойка» Фёдора Решетникова">
+      <div class="header__square-pic"></div>
     </header>
     <main class="main">
       <section class="description">
-        <h4 class="two-columns__brief text__color_style_blue">
+        <h4 class="two-columns__brief">
         Главные проблемы в обучении
         </h4>
         <div class="two-columns__main-text">
-        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-        <p class="two-columns__paragraph">
-        <span class="two-columns__span-accent">Вывод:</span>
-        учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+          <p class="two-columns__paragraph">
+            <span class="two-columns__span-accent">Вывод:</span>
+            учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
         </div>
       </section>
       <section class="digits">
-        <h5 class="section-title">Цифры и факты</h5>
-        <h6 class="section-subtitle">Про учёбу и мозг</h6>
+        <h5 class="section__title">Цифры и факты</h5>
+        <p class="section__subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h6 class="table__heading">86 миллиардов</h6>
-            <div class="table__text">Число нейронов в мозге человека</div>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
           <h6 class="table__heading">2.1 миллиарда</h6>
-            <div class="table__text">Число нуждающихся в повышении квалификации</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h6 class="table__heading">1000 терабайт</h6>
-            <div class="table__text">Объём памяти человека</div>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
             <h6 class="table__heading">500 триллионов</h6>
-            <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
             <h6 class="table__heading">420 миллионов</h6>
-            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h6 class="table__heading">17–20 лет</h6>
-            <div class="table__text">Пик обучаемости</div>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
             <h6 class="table__heading">1885 год</h6>
-            <div class="table__text">Открытие кривой забывания</div>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
             <h6 class="table__heading">1889 год</h6>
-            <div class="table__text">Открытие условного рефлекса</div>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
-      <section class="feinman background__color_style_light">
-        <h1 class="feinman__title">Метод Фейнмана</h1>
-        <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
-        <a href="#">
-          <div class="feinman__link text__color_style_default">Подробнее &#8594;</div>
-        </a>
-        <img src="./images/feynman.png" class="feinman__image" alt="Richard Phillips Feynman">
+      <section class="feinman">
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <p class="feinman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feinman__link">Подробнее &#8594</a>
+        <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
       </section>
-      <section class="kaufman background__color_style_dark">
-        <h3 class="section-title__theme_dark">Принципы обучения</h3>
-        <h4 class="section-subtitle__theme_dark">от Джоша Кауфмана</h4>
-        <div class="table table__theme_dark">
+      <section class="kaufman">
+        <h3 class="section__title section__title_theme_dark">Принципы обучения</h3>
+        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">1</div>
-            <div class="table__text table__text__theme_dark">Выберите привлекательный проект.</div>
+            <h6 class="table__heading table__heading_theme_dark">1</h6>
+            <div class="table__text table__text_theme_dark">Выберите привлекательный проект.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">2</div>
-            <div class="table__text table__text__theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+            <h6 class="table__heading table__heading_theme_dark">2</h6>
+            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">3</div>
-            <div class="table__text table__text__theme_dark">Определите целевой уровень мастерства.</div>
+            <h6 class="table__heading table__heading_theme_dark">3</h6>
+            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">4</div>
-            <div class="table__text table__text__theme_dark">Разбейте навык на элементы.</div>
+            <h6 class="table__heading table__heading_theme_dark">4</h6>
+            <div class="table__text table__text_theme_dark">Разбейте навык на элементы.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">5</div>
-            <div class="table__text table__text__theme_dark">Приготовьте всё необходимое для занятий.</div>
+            <h6 class="table__heading table__heading_theme_dark">5</h6>
+            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">6</div>
-            <div class="table__text table__text__theme_dark">Устраните препятствия для занятий.</div>
+            <h6 class="table__heading table__heading_theme_dark">6</h6>
+            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">7</div>
-            <div class="table__text table__text__theme_dark">Выделите специальное время для занятий.</div>
+            <h6 class="table__heading table__heading_theme_dark">7</h6>
+            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">8</div>
-            <div class="table__text table__text__theme_dark">Создайте быстрые петли обратной связи.</div>
+            <h6 class="table__heading table__heading_theme_dark">8</h6>
+            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">9</div>
-            <div class="table__text table__text__theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+            <h6 class="table__heading table__heading_theme_dark">9</h6>
+            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading__theme_dark">10</div>
-            <div class="table__text table__text__theme_dark">Уделяйте внимание количеству и скорости.</div>
+            <h6 class="table__heading table__heading_theme_dark">10</h6>
+            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
           </div>
         </div>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
-    <footer class="footer background__color_style_dark text__color_style_white">
+    <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <div class="logo logo__place_footer"></div>
-          <div class="footer__author text__style_">&copy; 2020 Kaschitskiy Maxim</div>
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; 2020 Kaschitskiy Maxim</p>
         </div>
-        <div class="footer__column_content_info">
-          <div class="footer__column-heading">О Практикуме</div>
-          <a href="#" class="link__text_underline_disable">
-            <span class="footer__social-links text__color_style_white">Главная</span>
-          </a>
-          <a href="#" class="link__text_underline_disable">
-            <span class="footer__social-links text__color_style_white">Концепция</span>
-          </a>
-          <a href="#" class="link__text_underline_disable">
-            <span class="footer__social-links text__color_style_white">Наставники</span>
-          </a>
+        <div class="footer__column footer__column_content_info">
+          <h6 class="footer__column-heading">О Практикуме</h6>
+          <ul class="footer__column-links">
+            <li class="footer__column-link">
+              <a class="text__color_style_white link__text_underline_disable" href="#">Главная</a>
+            </li>
+            <li class="footer__column-link">
+              <a class="text__color_style_white link__text_underline_disable" href="#">Концепция</a>
+            </li>
+            <li class="footer__column-link">
+              <a class="text__color_style_white link__text_underline_disable" href="#">Наставники</a>
+            </li>
+          </ul>
         </div>
         <div class="footer__column_content_social">
-          <div class="footer__column-heading">Соцсети</div>
-          <a href="#" class="link__text_underline_disable">
-            <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="fb-icon">
-            <span class="footer__social-links text__color_style_white">Facebook</span>
-          </a>
-          <a href="#" class="link__text_underline_disable">
-            <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk-icon">
-            <span class="footer__social-links text__color_style_white">ВКонтакте</span>
-          </a>
-          <a href="#" class="link__text_underline_disable">
-            <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="ig-icon">
-            <span class="footer__social-links text__color_style_white">Instagram</span>
-          </a>
+          <h6 class="footer__column-heading">Соцсети</h6>
+            <ul class="footer__social-links">
+              <li class="footer__social-link">
+                <a href="#" class="link__text_underline_disable text__color_style_white">
+                  <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="fb-icon">
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__social-link">
+                <a href="#" class="link__text_underline_disable text__color_style_white">
+                  <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk-icon">
+                  ВКонтакте
+                </a>
+              </li>
+              <li class="footer__social-link">
+                <a href="#" class="link__text_underline_disable text__color_style_white">
+                  <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="ig-icon">
+                  Instagram
+                </a>
+              </li>
+            </ul>
         </div>
       </div>
     </footer>
