--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo__place_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &#8594;</a>
@@ -20,9 +20,7 @@
     </header>
     <main class="main">
       <section class="description">
-        <h4 class="two-columns__brief">
-        Главные проблемы в обучении
-        </h4>
+        <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
           <p class="two-columns__paragraph">
@@ -78,48 +76,48 @@
         <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
       </section>
       <section class="kaufman">
-        <h3 class="section__title section__title_theme_dark">Принципы обучения</h3>
-        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h3 class="section__title section_title_theme_dark">Принципы обучения</h3>
+        <p class="section__subtitle section_subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">1</h6>
-            <div class="table__text table__text_theme_dark">Выберите привлекательный проект.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">1</h6>
+            <div class="table__text table_text_theme_dark">Выберите привлекательный проект.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">2</h6>
-            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">2</h6>
+            <div class="table__text table_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">3</h6>
-            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">3</h6>
+            <div class="table__text table_text_theme_dark">Определите целевой уровень мастерства.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">4</h6>
-            <div class="table__text table__text_theme_dark">Разбейте навык на элементы.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">4</h6>
+            <div class="table__text table_text_theme_dark">Разбейте навык на элементы.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">5</h6>
-            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">5</h6>
+            <div class="table__text table_text_theme_dark">Приготовьте всё необходимое для занятий.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">6</h6>
-            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">6</h6>
+            <div class="table__text table_text_theme_dark">Устраните препятствия для занятий.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">7</h6>
-            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">7</h6>
+            <div class="table__text table_text_theme_dark">Выделите специальное время для занятий.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">8</h6>
-            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">8</h6>
+            <div class="table__text table_text_theme_dark">Создайте быстрые петли обратной связи.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">9</h6>
-            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">9</h6>
+            <div class="table__text table_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h6 class="table__heading table__heading_theme_dark">10</h6>
-            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
+          <div class="table__cell table_cell_theme_dark">
+            <h6 class="table__heading table_heading_theme_dark">10</h6>
+            <div class="table__text table_text_theme_dark">Уделяйте внимание количеству и скорости.</div>
           </div>
         </div>
         <div class="kaufman__triangle"></div>
@@ -127,41 +125,41 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyright">
+        <div class="footer__column footer_column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&copy; 2020 Kaschitskiy Maxim</p>
+          <p class="footer__author">&mdash; &copy; 2020 Kaschitskiy Maxim</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <div class="footer__column footer_column_content_info">
           <h6 class="footer__column-heading">О Практикуме</h6>
           <ul class="footer__column-links">
-            <li class="footer__column-link">
-              <a class="text__color_style_white link__text_underline_disable" href="#">Главная</a>
+            <li>
+              <a class="footer__column-link" href="#">Главная</a>
             </li>
-            <li class="footer__column-link">
-              <a class="text__color_style_white link__text_underline_disable" href="#">Концепция</a>
+            <li>
+              <a class="footer__column-link" href="#">Концепция</a>
             </li>
-            <li class="footer__column-link">
-              <a class="text__color_style_white link__text_underline_disable" href="#">Наставники</a>
+            <li>
+              <a class="footer__column-link" href="#">Наставники</a>
             </li>
           </ul>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h6 class="footer__column-heading">Соцсети</h6>
             <ul class="footer__social-links">
-              <li class="footer__social-link">
-                <a href="#" class="link__text_underline_disable text__color_style_white">
+              <li>
+                <a href="#" class="footer__social-link">
                   <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="fb-icon">
                   Facebook
                 </a>
               </li>
-              <li class="footer__social-link">
-                <a href="#" class="link__text_underline_disable text__color_style_white">
+              <li>
+                <a href="#" class="footer__social-link">
                   <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk-icon">
                   ВКонтакте
                 </a>
               </li>
               <li class="footer__social-link">
-                <a href="#" class="link__text_underline_disable text__color_style_white">
+                <a href="#" class="footer__social-link">
                   <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="ig-icon">
                   Instagram
                 </a>
