--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="main">
-      <div class="two-colums">
-        <section class="description">
+      <section class="description">
+        <div class="two-columns">
           <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
@@ -29,8 +29,8 @@
             учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
       <section class="digits">
         <h5 class="section-title">Цифры и факты</h5>
         <p class="section-subtitle">Про учёбу и мозг</p>
