--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -16,7 +15,7 @@
         <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="«Опять двойка» Фёдора Решетникова">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="main">
       <section class="description">
@@ -30,6 +29,69 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <h5 class="section-title">Техники обучения</h5>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <div class="cards__mask">
+              <img src="images/cards-attention.png" class="cards__image" alt="Илюстрация к первой практике">
+            </div>
+            <div class="cards__title">Два вида внимания</div>
+            <div class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</div>  
+          </div>
+          <div class="cards__item cards__item_position_center">
+            <div class="cards__mask">
+              <img src="images/cards-recall.png" class="cards__image" alt="Илюстрация ко второй практике">
+            </div>
+            <div class="cards__title">Recall</div>
+            <div class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</div>  
+          </div>
+          <div class="cards__item">
+            <div class="cards__mask">
+              <img src="images/cards-interliving.png" class="cards__image" alt="Илюстрация к третьей практике">
+            </div>
+            <div class="cards__title">Интерливинг</div>
+            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</div>  
+          </div>
+          <div class="cards__item">
+            <div class="cards__mask">
+              <img src="images/cards-question.png" class="cards__image" alt="Илюстрация к четвёртой практике">
+            </div>
+            <div class="cards__title">Вопросы</div>
+            <div class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</div>  
+          </div>
+          <div class="cards__item cards__item_position_center">
+            <div class="cards__mask">
+              <img src="images/cards-competence.png" class="cards__image" alt="Илюстрация к пятой практике">
+            </div>
+            <div class="cards__title">Иллюзия компетентности</div>
+            <div class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</div>  
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h5 class="section-title">Видео нa TED</h5>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__clips"></iframe>
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__clips"></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h4 class="two-columns__brief two-columns__brief_position_oakley">История Барбары Оакли.</h4>
+          <div class="two-columns__main-text two-columns__main-text_position_oakley">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+          </div>
+        </div>
+      </section>
+      <section class="feinman">
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <p class="feinman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feinman__link">Подробнее &#8594;</a>
+        <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
       </section>
       <section class="digits">
         <h5 class="section-title">Цифры и факты</h5>
@@ -71,11 +133,18 @@
           </div>
         </div>
       </section>
-      <section class="feinman">
-        <h2 class="feinman__title">Метод Фейнмана</h2>
-        <p class="feinman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feinman__link">Подробнее &#8594;</a>
-        <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
+      <section class="khan">
+        <div class="khan__container">
+          <div class="khan__author">Салман Хан</div>
+          <div class="khan__title">Весь мир — школа</div>
+          <div class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</div>
+          <div class="khan__quote-author">Джордж Лукас</div>
+          <div class="khan__quote-auhor-subline">Кинорежиссер, продюсер</div>
+          <div class="khan__book-container">
+            <img src="images/khan-book.jpg" class="khan__book-pic">
+            <a href="#" class="khan__buy-link header__link">Купить книгу &#8594;</a>     
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
@@ -122,7 +191,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h5 class="section-title">Полезные ресурсы</h5>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="«Арзамас» — просветительский проект">
+          <img src="./images/logo/resources-n1.svg" class="resources__logo" alt="«Н+1» — научно-популярное развлекательное издание">
+          <img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="«Стрелка» — негосударственное образовательное учреждение">
+          <img src="./images/logo/resources-polka.svg" class="resources__logo" alt="«Полка» — образовательный проект о русской литературе">
+        </div>
       </section>
     </main>
     <footer class="footer">
